Closed
Bug 1230267
Opened 9 years ago
Closed 9 years ago
Inconsistent display of SVG title as tooltip when multi-process is enabled
Categories
(Core Graveyard :: Embedding: APIs, defect)
Tracking
(firefox46 fixed)
RESOLVED
FIXED
mozilla46
Tracking | Status | |
---|---|---|
firefox46 | --- | fixed |
People
(Reporter: dprice, Assigned: longsonr)
Details
Attachments
(1 file)
1.71 KB,
patch
|
jst
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_1) AppleWebKit/601.2.7 (KHTML, like Gecko) Version/9.0.1 Safari/601.2.7
Steps to reproduce:
When an SVG g element contains both a title and a shape such as a rect, the content of the title element is not drawn as a tooltip if multi-process Firefox is enabled. Per https://developer.mozilla.org/en-US/docs/Web/SVG/Element/title I would expect the title to be displayed as a tooltip. When multi-process is disabled or the title element is the child of the shape itself, the tooltip is displayed as expected.
this bug occurs in FF nightly 45.0a1 (2015-12-03) and FF Developer Edition 44.0a2 (2015-12-03) on Windows 10 and OS X 10.11
1. Enable multi-process Firefox
2. Open test case: http://codepen.io/daleprice/pen/MKgNRq
3. Hover over the red rectangle on the left
Actual results:
No tooltip is displayed over the red rectangle (which has the title element as the first child of the g element), but a tooltip is displayed over the green rectangle (which has the title element as the child of the rect element).
Expected results:
A tooltip should have been displayed when hovering over both rectangles.
The build ID of the nightly I found this in is 20151203053521
Comment 2•9 years ago
|
||
Confirmed
20151204030208
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:45.0) Gecko/20100101 Firefox/45.0
Status: UNCONFIRMED → NEW
Component: Untriaged → SVG
Ever confirmed: true
Assignee | ||
Updated•9 years ago
|
Component: SVG → Tabbed Browser
Product: Core → Firefox
Assignee | ||
Updated•9 years ago
|
Assignee: nobody → longsonr
Assignee | ||
Comment 3•9 years ago
|
||
Attachment #8701851 -
Flags: review?(jst)
Assignee | ||
Updated•9 years ago
|
Component: Tabbed Browser → Embedding: APIs
Product: Firefox → Core
Comment 4•9 years ago
|
||
Comment on attachment 8701851 [details] [diff] [review]
fix wrong variable
Patch looks good, but can we pleaase add a test for this as well so that we ensure this doesn't regress again?
Thanks!
Attachment #8701851 -
Flags: review?(jst) → review+
Assignee | ||
Comment 5•9 years ago
|
||
Any suggestions as to how I might write a test for this? Writing a complete c++ program, creating a bunch of nsDOMINodes somehow and calling the method seems overkill. I'm not sure how the browser does it? Can I plug into that? There's a remoteBrowserTooltip but I'm not sure that's the right thing or even how to use it if it is.
Flags: needinfo?(jst)
Comment 7•9 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox46:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
Comment 8•9 years ago
|
||
jwatt, can you help advice on how we could write a mochitest for this?
Flags: needinfo?(jst) → needinfo?(jwatt)
![]() |
||
Comment 9•9 years ago
|
||
Seems like this should be possible in principle using DOMWindowUtils and then checking the tooltip text in the parent process, but that seems like it would be quite subject to intermittent failures.
Flags: needinfo?(jwatt)
![]() |
||
Comment 10•9 years ago
|
||
Gijs notes that the new tab tests do something like this (moving tabs around with "real" mouse events) and suggests drilling down from https://mxr.mozilla.org/mozilla-central/source/browser/base/content/test/newtab/browser_newtab_drag_drop.js
Updated•6 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•