Bug 1230267 - Inconsistent display of SVG title as tooltip when multi-process is enabled. r=jst